Added ATCC reference database

--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -118,26 +118,31 @@ Rovinj, Croatia
 2. University of Vienna
 
 \newpage
-
 \linenumbers
 
-\subsection{Abstract}\label{abstract}
+\hypertarget{abstract}{%
+\subsection{Abstract}\label{abstract}}
 
 \newpage
 
-\subsection{Introduction}\label{introduction}
+\hypertarget{introduction}{%
+\subsection{Introduction}\label{introduction}}
 
-\subsection{Results and Discussion}\label{results-and-discussion}
+\hypertarget{results-and-discussion}{%
+\subsection{Results and Discussion}\label{results-and-discussion}}
 
-\subsection{Conclusions}\label{conclusions}
+\hypertarget{conclusions}{%
+\subsection{Conclusions}\label{conclusions}}
 
-\subsection{Materials and Methods}\label{materials-and-methods}
+\hypertarget{materials-and-methods}{%
+\subsection{Materials and Methods}\label{materials-and-methods}}
 
 \newpage
 
 \newpage
 
-\subsection{References}\label{references}
+\hypertarget{references}{%
+\subsection{References}\label{references}}
 
 
 \end{document}
