--- a/submission/header.tex
+++ b/submission/header.tex
@@ -10,3 +10,13 @@
 \usepackage{lineno}
 
 \usepackage{pdfpages}
+
+\usepackage{indentfirst}
+
+\usepackage[labelsep=period, labelfont=bf]{caption}
+\renewcommand{\thefigure}{S\arabic{figure}}
+\captionsetup{justification=raggedright,singlelinecheck=false}
+
+\usepackage{pdflscape}
+\newcommand{\blandscape}{\begin{landscape}}
+\newcommand{\elandscape}{\end{landscape}}
