--- a/submission/manuscript.Rmd
+++ b/submission/manuscript.Rmd
@@ -1,14 +1,14 @@
 ---
-title: "**NAME OF THIS STUDY**"
-bibliography: references.bib
+title: "**Selective DNA and Protein Extraction from Marine Macrophyte Surfaces**"
 output:
   pdf_document:
     keep_tex: true
     includes:
       in_header: header.tex
-csl: citation_style.csl #Get themes at https://github.com/citation-style-language/styles
-fontsize: 11pt
+fontsize: 12pt
 geometry: margin=1.0in
+csl: citation_style.csl #Get themes at https://github.com/citation-style-language/styles
+bibliography: references.bib
 ---
 
 ```{r knitr_settings, eval=TRUE, echo=FALSE, cache=FALSE}
@@ -38,35 +38,33 @@ inline_hook <- function(x){
 knitr::knit_hooks$set(inline=inline_hook)
 ```
 
-\vspace{35mm}
+\vspace{80mm}
 
-Running title: Selective extraction of DNA and proteins from epiphytic macrophyte mircobial communities
-
-\vspace{35mm}
-
-
-Your Name Here^1, Joeseph P. Schmo^2, Sally J. Rivers^1, Patrick D. Schloss^1$\dagger$^
+^1$\dagger$^
 
 \vspace{40mm}
 
 $\dagger$ To whom correspondence should be addressed: marino.korlevic@irb.hr
 
+
 1\. Ruđer Bošković Institute, Center for Marine Research, G. Paliaga 5, Rovinj, Croatia
 
-2\. University of Vienna
-
-
+2\. University of Vienna, Department of Limnology and Bio-Oceanography, Althanstraße 14, Vienna, Austria
 \newpage
 \linenumbers
-
+\setlength\parindent{24pt}
 
 ## Abstract
+jhfajklsgčklajsdbvlafgčladfhg
 
+lčkhfglashgčlashgčlak
 
 \newpage
 
 ## Introduction
 
+
+##Materials and Methods
 
 ## Results and Discussion
 
