--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,]{article}
+\documentclass[12pt,]{article}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -24,7 +24,7 @@
 \usepackage[margin=1.0in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={NAME OF THIS STUDY},
+            pdftitle={Selective DNA and Protein Extraction from Marine Macrophyte Surfaces},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -73,7 +73,8 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{\textbf{NAME OF THIS STUDY}}
+  \title{\textbf{Selective DNA and Protein Extraction from Marine Macrophyte
+Surfaces}}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{}
@@ -107,15 +108,9 @@
 \begin{document}
 \maketitle
 
-\vspace{35mm}
+\vspace{80mm}
 
-Running title: Selective extraction of DNA and proteins from epiphytic
-macrophyte mircobial communities
-
-\vspace{35mm}
-
-Your Name Here\^{}1, Joeseph P. Schmo\^{}2, Sally J. Rivers\^{}1,
-Patrick D. Schloss\textsuperscript{1\(\dagger\)}
+\textsuperscript{1\(\dagger\)}
 
 \vspace{40mm}
 
@@ -125,34 +120,34 @@ Patrick D. Schloss\textsuperscript{1\(\dagger\)}
 1. Ruđer Bošković Institute, Center for Marine Research, G. Paliaga 5,
 Rovinj, Croatia
 
-2. University of Vienna
-
-\newpage
+2. University of Vienna, Department of Limnology and Bio-Oceanography,
+Althanstraße 14, Vienna, Austria \newpage
 \linenumbers
+\setlength\parindent{24pt}
 
-\hypertarget{abstract}{%
-\subsection{Abstract}\label{abstract}}
+\subsection{Abstract}\label{abstract}
 
-\newpage
+jhfajklsgčklajsdbvlafgčladfhg
 
-\hypertarget{introduction}{%
-\subsection{Introduction}\label{introduction}}
-
-\hypertarget{results-and-discussion}{%
-\subsection{Results and Discussion}\label{results-and-discussion}}
-
-\hypertarget{conclusions}{%
-\subsection{Conclusions}\label{conclusions}}
-
-\hypertarget{materials-and-methods}{%
-\subsection{Materials and Methods}\label{materials-and-methods}}
+lčkhfglashgčlashgčlak
 
 \newpage
 
+\subsection{Introduction}\label{introduction}
+
+\subsection{Materials and Methods}\label{materials-and-methods}
+
+\subsection{Results and Discussion}\label{results-and-discussion}
+
+\subsection{Conclusions}\label{conclusions}
+
+\subsection{Materials and Methods}\label{materials-and-methods-1}
+
 \newpage
 
-\hypertarget{references}{%
-\subsection{References}\label{references}}
+\newpage
+
+\subsection{References}\label{references}
 
 
 \end{document}
