Chloroplast seq. selection optimization

--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -121,11 +121,11 @@ Surfaces}}
 Rovinj, Croatia
 
 2. University of Vienna, Department of Limnology and Bio-Oceanography,
-Althanstraße 14, Vienna, Austria \newpage
-\linenumbers
+Althanstraße 14, Vienna, Austria \newpage \linenumbers
 \setlength\parindent{24pt}
 
-\subsection{Abstract}\label{abstract}
+\hypertarget{abstract}{%
+\subsection{Abstract}\label{abstract}}
 
 jhfajklsgčklajsdbvlafgčladfhg
 
@@ -133,21 +133,26 @@ lčkhfglashgčlashgčlak
 
 \newpage
 
-\subsection{Introduction}\label{introduction}
+\hypertarget{introduction}{%
+\subsection{Introduction}\label{introduction}}
 
-\subsection{Materials and Methods}\label{materials-and-methods}
+\#\#Materials and Methods
 
-\subsection{Results and Discussion}\label{results-and-discussion}
+\hypertarget{results-and-discussion}{%
+\subsection{Results and Discussion}\label{results-and-discussion}}
 
-\subsection{Conclusions}\label{conclusions}
+\hypertarget{conclusions}{%
+\subsection{Conclusions}\label{conclusions}}
 
-\subsection{Materials and Methods}\label{materials-and-methods-1}
+\hypertarget{materials-and-methods}{%
+\subsection{Materials and Methods}\label{materials-and-methods}}
 
 \newpage
 
 \newpage
 
-\subsection{References}\label{references}
+\hypertarget{references}{%
+\subsection{References}\label{references}}
 
 
 \end{document}
