--- a/submission/manuscript.Rmd
+++ b/submission/manuscript.Rmd
@@ -8,9 +8,7 @@ output:
 fontsize: 12pt
 geometry: margin=1.0in
 csl: citation_style.csl #Get themes at https://github.com/citation-style-language/styles
-bibliography:
-  - references.bib
-  - R_citation.bib
+bibliography: references.bib
 ---
 
 ```{r knitr_settings, eval=TRUE, echo=FALSE, cache=FALSE}
@@ -81,26 +79,19 @@ The DNA was isolated according to the protocol for isolation from filters descri
 An aliquot of isolated DNA was treated with RNase A (final concentration 200 \si{\ug\per\ml}) for 2 \si{\hour} at 37 \si{\degreeCelsius}. The DNA concentration was determined using the Quant-iT PicoGreen dsDNA Assay Kit (Invitrogen, USA) according to the manufacturer’s instructions and diluted to 1 \si{\ng\per\ul}. The V4 region of the 16S rRNA gene was amplified using a two-step PCR procedure. In the first PCR the 515F (5'-GTGYCAGCMGCCGCGGTAA-3') and 806R (5'-GGACTACNVGGGTWTCTAAT-3') primers from the Earth Microbiome Project (http://press.igsb.anl.gov/earthmicrobiome/protocols-and-standards/16s/) were used to amplify the target region [@Caporaso2012; @Apprill2015; @Parada2016]. These primers contained on their 5' end a tagged sequence. Each sample was amplified in four parallel 25 \si{\ul} reactions of which each contained: 1 × Q5 Reaction Buffer , 0.2 \si{\milli\Molar} of dNTPmix, 0.7 \si{\mg\per\ml} BSA (Bovine Serum Albumin), 0.2 \si{\micro\Molar} of forward and reverse primers, 0.5 U of Q5 High-Fidelity DNA Polymerase (New England Biolabs, USA) and 5 \si{\ng} of DNA template. Cycling conditions were: initial denaturation at 94 \si{\degreeCelsius} for 3 \si{\minute}, 20 cycles of denaturation at 94 \si{\degreeCelsius} for 45 \si{\s}, annealing at 50 \si{\degreeCelsius} for 60 \si{\s} and elongation at 72 \si{\degreeCelsius} for 90 \si{\s}, finalized by an elongation step at 72 \si{\degreeCelsius} for 10 \si{\minute}. The four parallel reactions volumes were pooled and PCR products were purified using the GeneJET PCR Purification Kit (Thermo Fisher Scientific, USA) according to the manufacturer's instructions and following the protocol that included isopropanol addition for better small DNA fragment yield. The column was eluted in 30 \si{\ul} of deionized water. Purified PCR products were sent for Illumina MiSeq sequencing (2 × 250 bp) at IMGM Laboratories, Martinsried, Germany. Before sequencing, at IMGM the second PCR amplification of the two-step PCR procedure was performed using primers targeting the tagged region incorporated in the first PCR. In addition, these primers contained adapter and sample-specific index sequences. The second PCR was carried out for 8 cycles. Beside samples, a positive and negative control were sequenced. A negative control was comprised of four parallel PCR reactions without DNA template, while for a postive control a mock community composed of evenly mixed DNA material originating from 20 bacterial strains (ATCC MSA-1002, ATCC, USA) was used. The sequences obtained in this study have been submitted to the European Nucleotide Archive (ENA) under accession numbers ?????.
 
 ```{r}
-error <- read_tsv("data/mothur/data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.pick.error.summary") %>%
+# Calculation of the error rate based on the ATCC MSA-1002 mock community
+error <- read_tsv("data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.pick.error.summary", na="") %>%
   filter(numparents==1) %>%
-  mutate(mismatches_weight=weight*mismatches)
+  mutate(mismatches_weight=weight*mismatches) %>%
+  mutate(total_weight=weight*total)
+error <- sum(error$mismatches_weight)/sum(error$total_weight)*100
+# Calculation of the number of sequences in the negative control
+nc <- read_tsv("data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.nr_v132.wang.tax.summary") %>%
+  filter(taxon=="Root") %>%
+  select(ATCC_1)
 ```
-```{r}
-files <- list.files(path="data/mothur", pattern=".error.summary", full.names=TRUE)
 
-seq_error <- NULL
-for (i in seq(1 : length(files))) {
-  file <- read_tsv(files[i], na="") %>%
-    filter(numparents==1) %>%
-    mutate(mismatches_weight=weight*mismatches) %>%
-    mutate(total_weight=weight*total)
-  reference_database <- gsub(".error.summary$", "", files[i]) %>%
-    gsub("^data/mothur/", "", .)
-  file_error <- tibble(reference_database, weight=sum(file$weight), error=sum(file$mismatches_weight)/sum(file$total_weight)*100)
-  seq_error <- rbind(seq_error, file_error)
-}
-
-Obtained sequences were analyzed on the computer cluster Isabella (University Computing Center, University of Zagreb) using mothur (version 1.43.0)[@Schloss2009] according to the MiSeq Standard Operating Procedure (MiSeq SOP; https://mothur.org/wiki/MiSeq_SOP) [@Kozich2013] and recommandations given from the Riffomonas project to enhance data reproducibility (http://www.riffomonas.org/). For alignment and classification of sequences the SILVA SSU Ref NR 99 database (release 132; http://www.arb-silva.de) was used [@Quast2013; @Yilmaz2014]. Sequences classified as chloroplsts by mothur were exported, aligned using SILVA incremental aligner (SINA, version 1.6.0) [@Pruesse2012] against the same SILVA SSU Ref NR 99 database (release 132) and imported into ARB (version 6.0.6) [@Ludwig2004] for further phylogentic analysis using the same database. Reference sequences close to imported were selected and used to calculate a phylogentic tree using the Maximum Likelihood algorithm RAxML (version 7.0.3) with 1000 tree replicates [@Stamatakis2006]. Imported partial chloroplast sequences were added to the tree using the maximum parsimony criteria and not allowing changes to tree topology. Pipeline data processing and visualizaion was done using R (version 3.6.0) [@RCoreTeam2019], package tidyverse (version 1.2.1) [@Wickham2019] and multiple other packages [@Xie2014; @Xie2015; @Xie2019a; @Xie2019; @Zhu2019; @Allaire2019; @Xie2018]. The detailed analysis procedure including the R Markdown file for this paper are available as a GitHub repository (?????). Based on the ATCC MSA-1002 mock community included in the analysis a sequencing error of 
+Obtained sequences were analyzed on the computer cluster Isabella (University Computing Center, University of Zagreb) using mothur (version 1.43.0)[@Schloss2009] according to the MiSeq Standard Operating Procedure (MiSeq SOP; https://mothur.org/wiki/MiSeq_SOP) [@Kozich2013] and recommandations given from the Riffomonas project to enhance data reproducibility (http://www.riffomonas.org/). For alignment and classification of sequences the SILVA SSU Ref NR 99 database (release 132; http://www.arb-silva.de) was used [@Quast2013; @Yilmaz2014]. Sequences classified as chloroplsts by mothur were exported, aligned using SILVA incremental aligner (SINA, version 1.6.0) [@Pruesse2012] against the same SILVA SSU Ref NR 99 database (release 132) and imported into ARB (version 6.0.6) [@Ludwig2004] for further phylogentic analysis using the same database. Reference sequences close to imported ones were selected and used to calculate a phylogentic tree using the Maximum Likelihood algorithm RAxML (version 7.0.3) with 1000 tree replicates [@Stamatakis2006]. Imported partial chloroplast sequences were added to the tree using the maximum parsimony criteria and not allowing changes to tree topology. Pipeline data processing and visualizaion was done using R (version 3.6.0) [@RCoreTeam2019], package tidyverse (version 1.2.1) [@Wickham2019] and multiple other packages [@Xie2014; @Xie2015; @Xie2019a; @Xie2019; @Zhu2019; @Allaire2019; @Xie2018]. The detailed analysis procedure including the R Markdown file for this paper are available as a GitHub repository (?????). Based on the ATCC MSA-1002 mock community included in the analysis a sequencing error rate of `r error` \si{\percent} was detemined that is in line with previously reported values for next-generation sequencing data [@Kozich2013; @Schloss2016]. In addition, the negative control processed together with the samples yielded only `r nc` sequences.
 
 ### Protein Isolation and Metaproteomics
 Proteins were isolated according to the protocol for isolation from soil described in @Chourey2010 and modified by @Hultman2015. These protocols were further modified and adapted for protein isolation from microbial communities form macrophyte surfaces as described below. 20 \si{\ml} of protein extraction buffer (4 \si{\percent} SDS, 100 \si{\milli\Molar} Tris-HCl [pH 8.0]) was added to 5 \si{\g} wet weight of leaves or 10 \si{\g} wet weight of thalli. The mixture was incubated in boiling water for 5 \si{\minute}, vortexed for 10 \si{\minute} and incubated again in boiling water for 5 \si{\minute}. After a brief vortex the lysate was transferred to a clean tube separating the host leaves or thalli from the mixture containing lyzed epiphytic cells. Dithiothreitol (DTT; final concentration 24 \si{\milli\Molar}) was added and proteins were precipitated with chilled 100 \si{\percent} trichloroacetic acid (TCA; final concentration 20 \si{\percent}) overnight at \num{-20} °C. Precipitated proteins were centrifuged at 10,000 × g and 4 \si{\degreeCelsius} for 40 \si{\minute}. The obtained protein pellet was washed three times with chilled acetone. During the first washing step the pellet was transferred to a clean 1.5 \si{\ml} tube. After each washing step the samples were centrifuged at 20,000 × g and 4 \si{\degreeCelsius} for 5 \si{\minute}. Dried pellets were stored at \num{-80} °C until further analysis.
